fix date picker: fix picker open on firefox

--- a/modules/date-picker/scss/_date-picker.scss
+++ b/modules/date-picker/scss/_date-picker.scss
@@ -46,6 +46,10 @@
     input {
         cursor: pointer !important;
     }
+
+    input {
+        pointer-events: none;
+    }
 }
 
 .lx-date__clear {
